--- a/client.html
+++ b/client.html
@@ -6,15 +6,15 @@
 
 <body>
 
-<form action="/assignments" method="get">
+<form action="http://localhost:5000/assignments/" method="get">
     <input type="submit" value="READ">
 </form>
 
-<form action="/assignments" method="post">
+<form action="http://localhost:5000/assignments/" method="post">
     <input type="submit" value="Create assignment">
 </form>
 
-<form action="/assignments/list" method="get">
+<form action="http://localhost:5000/assignments/list" method="get">
     <input type="submit" value="List">
 </form>
 
