--- a/client.html
+++ b/client.html
@@ -6,15 +6,15 @@
 
 <body>
 
-<form action="http://localhost:5000/activities/" method="get">
+<form action="/activities/" method="get">
     <input type="submit" value="READ">
 </form>
 
-<form action="http://localhost:5000/activities/" method="post">
+<form action="/activities/" method="post">
     <input type="submit" value="Create assignment">
 </form>
 
-<form action="http://localhost:5000/activities/list" method="get">
+<form action="/activities/list" method="get">
     <input type="submit" value="List">
 </form>
 
