Add a comment in the file client, specifing that you need to add 'http://localhost:port/' before the application path, if you want to try it locally

--- a/client.html
+++ b/client.html
@@ -33,6 +33,7 @@
 
 <body>
 
+<!-- OSS: se lo uso in locale, devo aggiungere http://localhost:numPorta/...... -->
 <form action="/activities/" method="get">
     <input type="submit" value="READ">
 </form>
